<?xml version="1.0"?>
<package format="3">
  <name>mushroom_pose_ros2</name>
  <version>0.1.0</version>
  <description>Mushroom pose pipeline integration for lododo arm grasping.</description>
  <maintainer email="winnnnnn@local">winnnnnn</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
